--- a/src/css/catalogo.css
+++ b/src/css/catalogo.css
@@ -139,12 +139,14 @@
   flex-direction: column;
   border-radius: 20px;
   color: black;
+  font-size: 15px;
 }
 
-.titolo{
+.nomeProdotto{
   text-transform: uppercase;
   width: 40vw;
   font-size: 15px;
+  font-weight: bold;
   text-align: center;
 }
 
