--- a/src/css/home.css
+++ b/src/css/home.css
@@ -99,10 +99,13 @@
   }
   .imgContainer
   {
-    width: 65%;
+    width: 50%;
     height: 100%;
     text-align: center;
     font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .testo{
@@ -112,10 +115,13 @@
   }
   
   .immagine{
-    width: 80%;
-    height: 80%;
-    background: url(../assets/imgDrone.png);
-    background-size: cover;
+    margin-top: 50px;
+    margin-left: 10px;
+    width: 100%;
+    height: 100%;
+    background: url(public/LOGO.png);
+    background-size: contain;
+    background-repeat: no-repeat;
     
   }
   
