--- a/src/css/home.css
+++ b/src/css/home.css
@@ -83,7 +83,7 @@
   .ricette{
     width: 97%;
     height: 70%;
-    background: lightgrey;
+    background: white;
     border-radius: 20px;
     border:solid black 2px;
   }
