--- a/src/css/root.css
+++ b/src/css/root.css
@@ -7,7 +7,7 @@ body{
 .video
 {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
 }
 
@@ -46,12 +46,27 @@ h2{
   left: 50%;
   top: 80%;
   transform: translate(-50%, -50%);
-  width: 30vw;
+  width: 40vw;
+  height: 20vh;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.opzioni{
+  position: absolute;
+  font-size: 45px;
+  left: 50%;
+  top: 85%;
+  transform: translate(-50%, -50%);
+  width: 40vw;
   height: 20vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  transition: all 1s ease;
 }
 
 .link{
