--- a/src/css/assistenza.css
+++ b/src/css/assistenza.css
@@ -42,7 +42,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
   }
 
@@ -52,3 +52,37 @@
     text-align: center;
     margin-bottom: 20px;
   }
+
+  .chiamaci{
+    margin-right:5px;
+  }
+
+.cardsAssistenza{
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 45% 45%;
+  grid-template-rows: 49% 49%;
+  column-gap: 10px;
+  row-gap: 15px;
+  width: 95vw;
+  height: 50vh;
+  margin-top: 30px;
+}
+
+.cardAssistenza{
+  background: white;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.titoloCard{
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+}
