--- a/src/css/prodotto.css
+++ b/src/css/prodotto.css
@@ -1,84 +1,20 @@
-.nav-bar{
-    height: 10vh;
-    width: 100vw;
-    position: absolute;
-    bottom: 0%;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-  }
-
-  body{
-    height: 100vh;
-    width: 100vw;
-    overflow-x: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .bar{
-    height: 100%;
-    width: 100%;
-    background: #DDDDDD;
-    border-top: 2px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .circleCarrello
-  {
-    width: 40vw;
-    height: 40vw;
-    border-radius: 100px;
-    background: #64CC88;
-    position: absolute;
-    bottom: -50%;
-    left: 85%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4em;
-    color: black;
-    font-weight: bold;
-    border: solid black 2px;
-  }
-  
-  .imgCarrello
+.containerScheda
 {
-    height: 50%;
-    width: 40%;
-    background: url(../assets/vector.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-  }
-
-  .home
-  {
-    font-weight: bold;
-    color: black;
-    font-size: 25px;
-    text-transform: uppercase;
-    margin-left: 5%;
-  }
-
+  height: 80vh;
+}
 
   .back
 {
-    position: absolute;
-    top: 5%;
-    left: 5%;
     width: 40px;
     height: 40px;
     background: url(../public/arrow.png);
     background-size: contain;
     background-repeat: no-repeat;
+    margin-bottom: 10px;
   }
 
 .scheda{
-  height: 70vh;
+  height: 75vh;
   width: 90vw;
   background: white;
   margin-bottom: 20px;
@@ -90,7 +26,7 @@
 }
 
 .infoProdotto, .descrizione, .azioniProdotto{
-  height: 30%;
+  height: 25%;
   width: 98%;
 }
 
@@ -109,7 +45,7 @@
 
 .infoProdotto{
   width: 100%;
-  height: 30%;
+  height: 25%;
   display: flex;
   align-items: center;
   justify-content: center;
