--- a/client/src/css/root.css
+++ b/client/src/css/root.css
@@ -9,13 +9,15 @@ body{
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 video{
-  width: 390px;
-  height: 844px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  transform: scale(2.2);
+  transform: scale(1.3);
 }
 
 .layer
@@ -27,7 +29,7 @@ video{
   top: 50%;
   transform: translate(-50%, -50%);
   background: black;
-  opacity: .4;
+  opacity: .5;
 }
 
 h2{
