--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -56,19 +56,30 @@
     font-weight: bold;
     border: solid black 2px;
   }
+
+  .saluto
+  {
+    font-weight: bold;
+    margin-bottom: 20px;
+    font-size: 30px;
+    text-transform: capitalize;
+    text-align: left;
+    width: 100%;
+    margin-left: 20px;
+  }
   
   .content
   {
     width: 80vw;
     height: 80vh;
     position: absolute;
-    top: 8%;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
     justify-content: start;
     align-items: center;
     flex-direction: column;
+    overflow-y:visible;
   }
   
   .tempo-consegna{
@@ -86,17 +97,26 @@
   
   .ricette{
     width: 97%;
-    height: 70%;
+    height: 60%;
     background: white;
     border-radius: 20px;
     border:solid black 2px;
+  }
+
+  .containerScheda{
+    width: 100vw;
+    height: 80VH;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
   }
   
   .testo
   {
     width: 40%;
     height: 100%;
-    font-size: 12px;
+    font-size: 18px;
     text-align: center;
     font-weight: bold;
     margin-right: 5px;
