--- a/client/src/css/catalogo.css
+++ b/client/src/css/catalogo.css
@@ -96,10 +96,12 @@
 
   .filtri
   {
-    height: 50px;
+    width: 100%;
+    height:70px;
     overflow-x: scroll;
-    margin: auto;
     display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top:4%;
     margin-left:3.5%;
     flex-shrink: 0;
@@ -119,6 +121,8 @@
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+    width: 30%;
+    text-align: center;
 }
 
 .prodotti{
